# blair-utils

./: 404.html  Cargo.toml  LICENSE  README.md  blair.toml  index.html  main.js  manifest.json  robots.txt  styles.css
fonts/: .blair-fonts.md
src/: .env.config  Cargo.toml  batchCompress.py  dropMapper.py  main.rs
