[package]
name = "blaircompress"
version = "0.1.0"
edition = "2021"
authors = ["sethispr"]
readme = "README.md"
repository = "https://github.com/sethispr/blair-utils"
description = "CLI utility tools for blair"
keywords = ["terminal", "utility", "png", "optimization"]
categories = ["command-line-interface"]
license = "MIT"

[profile.dev]
opt-level = 1
codegen-units = 16
incremental = true

[profile.release]
opt-level = 3
lto = true

[dependencies]
oxipng = "9.1.5"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
indicatif = "0.18.0"
anyhow = "1.0.82"
indexmap = "2.11.4"
clap = { version = "4.5.48", features = ["derive"] }
colored = "2.2.0"
dialoguer = "0.12.0"
toml = "0.9.8"
chrono = "0.4.42"

[[bin]]
name = "blaircompress"
path = "src/main.rs"
